<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/topic_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_padding"
        android:layout_marginHorizontal="@dimen/big_padding"
        android:fontFamily="sans-serif-light"
        android:text="@string/add_topic"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/edit_topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:fontFamily="sans-serif-light"
        android:inputType="textAutoComplete"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/date_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_padding"
        android:layout_marginHorizontal="@dimen/big_padding"
        android:fontFamily="sans-serif-light"
        android:text="@string/topic_date"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/edit_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:fontFamily="sans-serif-light"
        android:inputType="date"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/choose_subject_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_padding"
        android:layout_marginHorizontal="@dimen/big_padding"
        android:fontFamily="sans-serif-light"
        android:text="@string/hint_subject"
        android:textSize="18sp"/>

    <Spinner
        android:id="@+id/choose_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:fontFamily="sans-serif-light"
        android:inputType="date"
        android:padding="@dimen/small_padding"
        android:background="@drawable/spinner_border"/>

    <TextView
        android:id="@+id/duration_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_padding"
        android:layout_marginHorizontal="@dimen/big_padding"
        android:fontFamily="sans-serif-light"
        android:text="@string/duration"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/edit_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:fontFamily="sans-serif-light"
        android:inputType="number"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/button_save_topic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/big_padding"
            android:background="@color/colorPrimary"
            android:text="@string/button_save"
            android:textColor="@color/buttonLabel" />

        <Button
            android:id="@+id/button_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:background="@android:color/darker_gray"
            android:text="@string/button_complete"
            android:textColor="@color/buttonLabel" />
    </LinearLayout>

</LinearLayout>