<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginBottom="@dimen/small_padding"
    android:background="#9AB3F5">

    <LinearLayout
        android:id="@+id/layoutItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingHorizontal="@dimen/small_padding"
        android:paddingTop="@dimen/big_padding"
        android:paddingBottom="@dimen/small_padding"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/itemTextView"
            style="@style/header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/detailsTextView"
            style="@style/header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-1dp"
            android:textSize="14sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/img_delete_item"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="@dimen/small_padding"

            android:src="@drawable/ic_baseline_delete_24" />
    </LinearLayout>
</LinearLayout>