<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/study_partner"
        android:icon="@drawable/ic_baseline_person_add_24"
        android:title="@string/study_partner"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/all_subjects"
        android:icon="@drawable/ic_baseline_library_books_24"
        android:title="@string/all_subjects"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/new_topic"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/add_topic"
        app:showAsAction="ifRoom" />
</menu>
